1260865:TISPRDT-1206: alignment is not proper in edit address pop up in Tablet view  issue resolved.

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
@@ -39763,6 +39763,9 @@ a.product-listing .promo:hover {
 		height: 46px;
 		width: 46px;
 	}
+	#deliveryAddressForm .addressSpace {
+    width: 90%; /* TISPRDT-1206 */
+	}
 }
 
 .cart-list .product-item:nth-child(2n) {
